# yolo-cli

./: README.md  automl_csv.py  pyproject.toml  voc_xml.py
yolo/: __init__.py  __main__.py  config.py  constants.py  model.py
yolotools/: __init__.py  __main__.py  cli.py  config.py  dataset.py  model.py  voc.py
