[tool.poetry]
name = "yolotools"
version = "0.1.0"
description = "YOLO toolset for annotating images"
authors = ["IDA Kenichiro <ida.kenichiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.2"
labelImg = "^1.8.4"
opencv-python-headless = "^4.4.0"
requests = "^2.25.0"
rich = "^9.3.0"
typer = "^0.3.2"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
